# accendino

./: .gitignore  .project  .pydevproject  .pylintrc  CHANGELOG.md  MANUAL.md  README.md  Support.md  accendino.py  forgiare.accendino  forgiare.conf  ogon.accendino  pyproject.toml  weston.accendino
.github/workflows/: ci-github.yml  ci-windows.yml  ci.yml
ci/: build-options-ci.ini
src/accendino/: __init__.py  builditems.py  localdeps.py  main.py  platform.py  sources.py  toolchain.py  utils.py
src/accendino/cross/: debian-mingw64.cmake  debian-mingw64.meson  mingw64-cmake.cmake
src/accendino/pocket/: cairo.accendino  cjson.accendino  faac.accendino  faad2.accendino  ffmpeg.accendino  freerdp-mac-deps.accendino  freerdp.accendino  libusb.accendino  openh264.accendino  openssl.accendino  opus.accendino  qfreerdp_platform.accendino  sdl2.accendino  sso-mib.accendino  uriparser.accendino  x264.accendino  zlib.accendino
tests/: testNativePath.py
