[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accendino"
description = "A build framework for your complex projects"
readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = ["version"]

keywords = ["build-system", "ogon", "development"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools"
]
authors = [
  {name = "David Fort", email = "contact@hardening-consulting.com"},
]
maintainers = [
  {name = "David Fort", email = "contact@hardening-consulting.com"},
]
dependencies = ["zenlog", "packaging"]

[project.urls]
Homepage = "https://github.com/forgiare/accendino"

[tool.setuptools.dynamic]
version = {attr = "accendino.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
accendino = ["pocket/*.accendino", "cross/*.conf", "cross/*.cmake"]

[project.scripts]
accendino = "accendino.main:main"
